Add all HTML and video

--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
         <p><a href="#">Download Excursion (Coming soon!)</a></p>
     </header>
     <body>
-
+        <section id="video">
+            <video src="resources/videos/excursion.mp4">Excursion app</video>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        </section>
+        <section id="coming-soon">
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="A camp">
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="Phone Icon">
+            <h2>Coming Soon for iPhone and Android</h2>
+            <p><a href="#">Download Excursion (Coming soon!)</a></p>
+        </section>
     </body>
     <footer>
-
+        <p><small>Copyright Excursion</small></p>
     </footer>
 </html>
