--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="nl">
     <head>
         <title>Excursion</title>
-        <link href="./resources.css/styles.css" type="text/css" rel="stylesheet">
+        <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
-    <!-- Add top-most header and download link-->
+    <!-- Add top-most header and download link -->
     <header>
         <h1>Discover hidden places in the world around you</h1>
         <p><a href="#">Download Excursion (Coming soon!)</a></p>
     </header>
     <body>
+        <!-- Add video -->
         <section id="video">
             <video src="resources/videos/excursion.mp4">Excursion app</video>
             <h2>Your personal travel guide</h2>
             <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
         </section>
+        <!-- Add image and coming soon!-->
         <section id="coming-soon">
             <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="A camp">
+            <br>
             <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="Phone Icon">
             <h2>Coming Soon for iPhone and Android</h2>
             <p><a href="#">Download Excursion (Coming soon!)</a></p>
