Fix bug video to autoplay

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <body>
         <!-- Add video -->
         <section id="video">
-            <video src="resources/videos/excursion.mp4">Excursion app</video>
+            <video autoplay>
+                <source src="resources/videos/excursion.mp4" type="video/mp4">
+            </video>
             <h2>Your personal travel guide</h2>
             <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
         </section>
